*fix default text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Личный сайт Дарьи Ломако</title>
+  <title>by.daria.photo</title>
 </head>
 <body>
-  <h1>Привет, мир! Даша</h1>
+  <p>Всем привет. Сайт в разработке.</p>
+  <p><a href="https://vk.com/bydariaphoto">ВКонтакте</a> <a href="https://www.instagram.com/by.daria.photo/">Instagram</a></p>
 </body>
 </html>
