--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>by.daria.photo</title>
+  <title>daria.photo</title>
 </head>
 <body>
   <p>Всем привет. Сайт в разработке.</p>
-  <p><a href="https://vk.com/bydariaphoto">ВКонтакте</a> <a href="https://www.instagram.com/by.daria.photo/">Instagram</a></p>
+  <p><a href="https://vk.com/dariaphotoby">ВКонтакте</a> <a href="https://www.instagram.com/daria.photo.by/">Instagram</a></p>
 </body>
 </html>
